@@ -4,7 +4,7 @@ AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(config.h)
 
 RPM_RELEASE=1
-AM_INIT_AUTOMAKE(libdv, 0.4)
+AM_INIT_AUTOMAKE(libdv, 0.5pre)
 
 AC_CANONICAL_HOST
 AM_MAINTAINER_MODE
@@ -36,20 +36,27 @@ AC_ARG_ENABLE(asm,
 	fi
 ])
 
-use_sdl=:
+use_sdl=false
 AC_ARG_ENABLE(sdl,
-[  --disable-sdl           disable use of SDL for display],
-[     if test "$enableval" = "no"; then
-               use_sdl=false
+[  --enable-sdl            enable use of SDL for display],
+[     if test "$enableval" = "yes"; then
+               use_sdl=:
        fi
 ])
 
 use_xv=:
 AC_ARG_ENABLE(xv,
-[  --disable-xv           disable use of XVideo extension for display],
+[  --disable-xv            disable use of XVideo extension for display],
 [     if test "$enableval" = "no"; then
                use_xv=false
        fi
+])
+
+AC_ARG_ENABLE(gprof,
+[  --enable-gprof          enable compiler options for gprof profiling],
+[	if test "$enableval" = "yes"; then
+	  CFLAGS="$CFLAGS -g -pg"
+	fi
 ])
 
 if $use_asm; then
@@ -64,7 +71,7 @@ if $use_asm; then
 fi
 
 AC_ARG_WITH(pal-yuv,
-[ --with-pal-yuv=(YV12|YUY2)  Select YUV format for IEC PAL (YUY2 by default) ],
+[  --with-pal-yuv=(YV12|YUY2)  Select YUV format for IEC PAL (YUY2 by default) ],
 [
 	case "$with_pal_yuv" in
 	     YV12)
